Place first element

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Gymkhana, des ateliers et jeux agiles pour les citoyens et les collectivités</title>
-		<meta name="description" content="Formation atelier destinée aux collectivités." />
-		<meta name="keywords" content="formation, incubation, intelligence collective" />
-		<meta name="author" content="Claude Aubry & Stéphane Langlois (scopyleft)" />
+		<title>Académie de Go de Fan Hui</title>
+		<meta name="description" content="École de Go de Fan Hui." />
+		<meta name="keywords" content="weiqi, go, baduk, école, académie, intelligence collective" />
+		<meta name="author" content="Fan Hui & Stéphane Langlois (scopyleft)" />
 		<!-- Bootstrap -->
 		<script src="./js/modernizr.custom.js"></script>
 		<link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -48,13 +48,13 @@
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown">
-								Libérer les relations avec les citoyens
+								Votre coach de Go eb ligne
 								<br />
 								<br />
-								« Avec Gymkhana, les collectivités adoptent l’esprit startup et deviennent plus agiles. »
+								« Étudiez dans une vraie école de Go asiatique. »
 								<br />
 							</h1>
-							<a href="m&#x61;ilto:bonjour%40scopyleft&#46;fr" class="use-btn animated fadeInUp">Nous contacter</a>
+							<a href="m&#x61;ilto:oragefan%40yahoo&#46;fr" class="use-btn animated fadeInUp">Contacte-moi</a>
 							<a href="#features" class="learn-btn animated fadeInUp">En apprendre un peu plus avant <i class="fa fa-arrow-down"></i></a>
 						</div>
 					</div>
