--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown">
-								Votre coach de Go eb ligne
+								Votre coach de Go en ligne
 								<br />
 								<br />
 								« Étudiez dans une vraie école de Go asiatique. »
