--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 					<div class="row hero-content">
-						<div class="col-md-12">
+						<div class="col-md-12 col-md-offset-1">
 							<h1 class="animated fadeInDown">
 								Votre coach de Go en ligne
 								<br />
