--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
 						</li>
 						<li>
 							<figure>
-								<img src="./img/thumbnails/activer-page-blanche-ensemble.jpg" alt="Activer la page blanche ensemble">
+								<img src="./img/thumbnails/activer-page-blanche-ensemble.jpg" alt="Étudier sérieusement ses parties">
 								<figcaption>
 								<div class="caption-content">
 									<a href="./img/large/activer-page-blanche-ensemble.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Remplir la page blanche ensemble, collectivités et citoyens</p>
+                    <p>Étudier sérieusement ses parties</p>
 									</a>
 								</div>
 								</figcaption>
