--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
 						</li>
 						<li>
 							<figure>
-								<img src="./img/thumbnails/collaborer-et-coconstruire.jpg" alt="Collaborer et co-construire">
+								<img src="./img/thumbnails/collaborer-et-coconstruire.jpg" alt="Une pédagogie adaptée">
 								<figcaption>
 								<div class="caption-content">
 									<a href="./img/large/collaborer-et-coconstruire.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Voyager léger à la rencontre des citoyens</p>
+										<p>Une pédagogie adaptée</p>
 									</a>
 								</div>
 								</figcaption>
