--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
 					<ul class="grid">
 						<li>
 							<figure>
-								<img src="./img/thumbnails/explorer-votre-inconnu.jpg" alt="Explorer votre inconnu">
+								<img src="./img/thumbnails/explorer-votre-inconnu.jpg" alt="Des tournois pour progresser">
 								<figcaption>
 								<div class="caption-content">
 									<a href="./img/large/explorer-votre-inconnu.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Collaborer et co-construire avec les citoyens</p>
+										<p>Des tournois pour progresser</p>
 									</a>
 								</div>
 								</figcaption>
