--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
 						</li>
 						<li>
 							<figure>
-								<img src="./img/thumbnails/decouvrir-des-endroits-insolites.jpg" alt="Découvrir des endroits insolites">
+								<img src="./img/thumbnails/decouvrir-des-endroits-insolites.jpg" alt="Progresser en pratiquant sérieusement">
 								<figcaption>
 								<div class="caption-content">
 									<a href="./img/large/decouvrir-des-endroits-insolites.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Découvrir des idées nouvelles et les essayer</p>
+										<p>Progresser en pratiquant sérieusement</p>
 									</a>
 								</div>
 								</figcaption>
