--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								Votre coach de Go en ligne
 								<br />
 								<br />
-								« Étudiez dans une vraie école de Go asiatique. »
+								« Étudiez dans une vraie école de Go asiatique »
 								<br />
 							</h1>
 							<a href="m&#x61;ilto:oragefan%40yahoo&#46;fr" class="use-btn animated fadeInUp">Contacte-moi</a>
@@ -71,9 +71,9 @@
 								<i class="fa fa-star"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Participation citoyenne</h1>
-								<p>Vous souhaitez améliorer la participation des citoyens à la vie de votre collectivité. Mais vous constatez tous les jours que ce n’est pas facile de trouver le juste équilibre dans la concertation.</p>
-								<p>Gymkhana propose un cadre éprouvé et sécurisé qui garantit une juste répartition de la parole en faisant émerger la créativité, tout en préservant la singularité des participants.</p>
+								<h1>Accompagnement personnalisés</h1>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.  
+								</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -81,9 +81,8 @@
 								<i class="fa fa-dollar"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Faisabilité opérationnelle</h1>
-								<p>Gymkhana s’applique à un projet ou un service innovant. Il s’agit avant tout de produire le maximum de valeur (pas forcément marchande) avec le minimum de moyens.</p>
-								<p>Vous voulez réduire l’engorgement de votre rocade, créer un hackaton ? Générer des idées pour lancer un appel à projets ? Gymkhana est là.</p>
+								<h1>Commentaires ciblés</h1>
+								<p>Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -91,10 +90,8 @@
 								<i class="fa fa-flash"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Intelligence collective</h1>
-								<p>On peut planifier de travaux de réalisation, mais il n’existe pas de mode d’emploi ni de plan pour trouver des solutions innovantes à des problèmes complexes.</p>
-
-								<p>Les ateliers favorisent l’émergence de nouvelles idées, entretiennent la collaboration pour en débattre et facilitent la convergence vers une solution partagée. Les idées sont modélisées et testées en direct par le groupe.</p>
+								<h1>Mode tournoi</h1>
+								<p>Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
 							</div>
 						</div>
 
@@ -127,51 +124,28 @@
 							</div>
 						</div>
 						<div class="col-md-6" id="promise">
-							<h1>Notre promesse de valeur</h1>
-							<p>En une journée Gymkhana, sur le thème que vous aurez choisi, découvrez le produit ou le service qu’attendent les citoyens. Le résultat vous permet d’obtenir une vision partagée du service souhaité.</p>
-							<p>L’offre Gymkhana pour les collectivités s’adapte au contexte, qui est à chaque fois différent. Voici un exemple de programme possible pour le workshop, qui se déroule avec un public composé de représentants des collectivités et de citoyens.</p>
-						</div>
+							<h1>S'entrainer en langue française avec un joueur Pro</h1>
+              <p>Selon mon expérience, La méthode la plus efficace est très simple, jouer des parties sérieuses et avoir des commentaires adaptés, mais ce n'est pas toujours facile de jouer des parties en ligne sérieuses et pas facile non plus d'avoir un commentaire de qualité.</p>
+              <p>L'académie vous propose une accompagnement personnalisé et une pédagogie adaptée à votre style.</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<section class="screenshots-intro" id="deroule">
+		<section class="download" id="contact">
 			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<h1>Workshop Gymkhana</h1>
-						<dl>
-							<dt>9h00</dt>
-							<dd>Objectif de la journée, avec présentation du sujet par le sponsor et du cadre par les 2 animateurs</dd>
-							<dt>9h15</dt>
-							<dd>Premier atelier pour identifier et organiser les parties-prenantes concernées : « des acteurs et des pépées »</dd>
-							<dt>10h15</dt>
-							<dd>Quels sont les impacts attendus sur la vie des citoyens ? L’atelier « Impacts rétro-futuristes » y répond</dd>
-							<dt>11h15</dt>
-							<dd>On vérifie les hypothèses avec des interviews portant sur les problèmes à résoudre</dd>
-							<dt>12h00</dt>
-							<dd>Les animateurs font la synthèse de ce qui a été découvert pendant la matinée</dd>
-							<dt>12h15</dt>
-							<dd>Les échanges continuent lors du repas pris en commun</dd>
-							<dt>13h30</dt>
-							<dd>Pendant l’atelier « Avis à la population », les participants font l’affiche du produit et convergent vers une proposition de valeur unique</dd>
-							<dt>14h45</dt>
-							<dd>Pause : lisez vos sms, écrivez vos mails, écoutez vos messages</dd>
-							<dt>15h00</dt>
-							<dd>Un groupe réfléchit aux solutions, un autre aux défis, les 2 se confrontent, c’est « Le défi des soluces »</dd>
-							<dt>16h00</dt>
-							<dd>Comment se rapprocher des futurs utilisateurs ? Par quels canaux informer les citoyens ? -> atelier « Canal du Midi »</dd>
-							<dt>16h45</dt>
-							<dd>Dernier atelier pour se mettre d’accord collectivement sur l’originalité à exploiter dans le produit</dd>
-							<dt>17h15</dt>
-							<dd>Rétrospective sur la journée</dd>
-							<dt>17h30</dt>
-							<dd>Clôture du workshop et annonce des actions à suivre</dd>
-						</dl>
-                        <p>Le tarif pour une journée comme celle-ci, avec danimateurs, incluant la préparation (accord sur le sujannonce numérique pour attirer des citoyens) et la consolidation (fourniture d’un canevas d’opportunité) est de 4.000€ HT. Selon l’objectif visé, il est possible d’ajouter une session pour choisir un sujet en amont et d’aller plus loin sur la définition du projet.</p>
+			    <div class="row">
+        	        <div class="col-md-12">
+                        <div class="col-md-6 col-md-offset-3">
+                            <h1>Fan Hui</h1>
+                            <p>Deuxième dan Professionnel en Chine. Actuellement, premier sur échelle de niveau d’Europe...</p>
+                        </div>
                     </div>
-				</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 text-center wp4 animated fadeInDown">
+                        <a href="/" class="download-btn">S'inscrire<i class="fa fa-heart"></i></a>
+                    </div>
+                </div>
 			</div>
 		</section>
 		<section class="screenshots" id="screenshots">
@@ -180,12 +154,12 @@
 					<ul class="grid">
 						<li>
 							<figure>
-								<img src="./img/thumbnails/premiers-pas-dune-aventure.jpg" alt="Les premiers pas d’une aventure">
+								<img src="./img/thumbnails/marcher-pour-reflechir.jpg" alt="Ajuster régulièrement sa trajectoire">
 								<figcaption>
 								<div class="caption-content">
-									<a href="./img/large/premiers-pas-dune-aventure.jpg" class="single_image">
+									<a href="./img/large/marcher-pour-reflechir.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Les premiers pas d’un voyage vers l’agilité</p>
+										<p>Ajuster régulièrement sa trajectoire</p>
 									</a>
 								</div>
 								</figcaption>
@@ -249,12 +223,12 @@
 						</li>
 						<li>
 							<figure>
-								<img src="./img/thumbnails/laisser-infuser-ses-idees.jpg" alt="Laisser infuser ses idées">
+								<img src="./img/thumbnails/laisser-infuser-ses-idees.jpg" alt="Être accompagné, guidé, evalué">
 								<figcaption>
 								<div class="caption-content">
 									<a href="./img/large/laisser-infuser-ses-idees.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Filtrer les idées pour ne garder que les bonnes</p>
+										<p>Être accompagné, guidé, evalué</p>
 									</a>
 								</div>
 								</figcaption>
@@ -262,25 +236,25 @@
 						</li>
 						<li>
 							<figure>
-								<img src="./img/thumbnails/marcher-pour-reflechir.jpg" alt="Marcher pour réfléchir">
-								<figcaption>
-								<div class="caption-content">
-									<a href="./img/large/marcher-pour-reflechir.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>Ajuster régulièrement sa trajectoire pour plus d’impact</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<img src="./img/thumbnails/tester-uniquement-lessentiel.jpg" alt="Tester uniquement l’essentiel">
+								<img src="./img/thumbnails/tester-uniquement-lessentiel.jpg" alt="Des commentaires personnalisés et dynamiques">
 								<figcaption>
 								<div class="caption-content">
 									<a href="./img/large/tester-uniquement-lessentiel.jpg" class="single_image">
 										<i class="fa fa-search"></i><br>
-										<p>Garder uniquement l’essentiel, oublier le superflu</p>
+										<p>Des commentaires personnalisés et dynamiques</p>
+									</a>
+								</div>
+								</figcaption>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<img src="./img/thumbnails/premiers-pas-dune-aventure.jpg" alt="Tracer la route pour progresser">
+								<figcaption>
+								<div class="caption-content">
+									<a href="./img/large/premiers-pas-dune-aventure.jpg" class="single_image">
+										<i class="fa fa-search"></i><br>
+										<p>Tracer la route pour progresser</p>
 									</a>
 								</div>
 								</figcaption>
@@ -290,34 +264,8 @@
 				</div>
 			</div>
 		</section>
-		<section class="download" id="contact">
-			<div class="container">
-			    <div class="row">
-        	        <div class="col-md-12">
-          	            <div class="col-md-4 col-md-offset-1">
-            	            <h1>Claude Aubry</h1>
-                            <p>Pionnier de Scrum en France, j’aide les organisations dans leur transformation agile. Auteur du livre « Scrum, le guide pratique de la méthode agile la plus populaire » publié chez Dunod et diffusé à plus de 15.000 exemplaires.</p>
-          	            </div>
-                        <div class="col-md-4 col-md-offset-2">
-                            <h1>Stéphane Langlois</h1>
-                            <p>Mon job consiste à accompagner des équipes pour construire des modèles innovants. Chercheur de pépites collaboratives, j’essaye de faciliter l'auto-organisation. En 2012, nous avons co-décidé de co-créer la coopérative scopyleft pour favoriser la réussite de produits numériques innovants et solidaires.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 text-center wp4 animated fadeInDown">
-                        <a href="mailto:bonjour%40scopyleft.fr" class="download-btn">Contactez-nous&nbsp;! <i class="fa fa-heart"></i></a>
-                    </div>
-                </div>
-			</div>
-		</section>
 		<footer>
         	<div class="container">
-              <div class="row">
-                <div class="col-md-5">
-                  <p>Cette formation est une initiative de <a href="http://aubryconseil.com">Claude Aubry</a> et de <a href="http://scopyleft.fr">Stéphane Langlois</a>.</p>
-                </div>
-              </div>
             </div>
 		</footer>
 		<div class="overlay overlay-boxify">
