Add solutions and rates

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Accompagnement personnalisés</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor.  
+								<p>C'est un peu paradoxal, mais plus on progresse en Go et plus on s'isole. Ton niveau augmente, et ça devient difficile de trouver des joueurs plus forts pour te conseiller, et te motiver. Je suis très attaché à la notion de proximité et de personnalisation. Chaque joueur est unique et possède son propre style, l'accompagnement tient compte du carractère de chacun, et la pédagogie est finement adaptée.   
 								</p>
 							</div>
 						</div>
@@ -82,7 +82,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Commentaires ciblés</h1>
-								<p>Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
+								<p>On se dit souvent que l'on pourrait progresser si on se mettait à jouer sérieusement. En attendant, on joue ses parties en diletantte, et on s'abreuve de théorie. Pour s'amuser et progresser, il faut rester simple, faire des parties sérieuses, et obtenir des conseils adaptés et flexibles. Mes commentaires sont ciblés, ils servent toujours un objectif pedagogique personnalisé.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -91,11 +91,11 @@
 							</div>
 							<div class="feature-content">
 								<h1>Mode tournoi</h1>
-								<p>Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
+								<p>Jouer en boucle, c'est un peu comme mettre le pilote automatique et répeter inlassablement ses erreurs. Les parties de tournois permettent de mettre un enjeu raisonable pour que chaque joueur s'engage vraiment dans chacune d'elles. C'est également en jouant, et pendant les commentaires que vous allez construire collectivement votre équipe.</p>
 							</div>
 						</div>
-
 					</div>
+
 				</div>
 			</div>
 		</section>
@@ -126,7 +126,7 @@
 						<div class="col-md-6" id="promise">
 							<h1>S'entrainer en langue française avec un joueur Pro</h1>
               <p>Selon mon expérience, La méthode la plus efficace est très simple, jouer des parties sérieuses et avoir des commentaires adaptés, mais ce n'est pas toujours facile de jouer des parties en ligne sérieuses et pas facile non plus d'avoir un commentaire de qualité.</p>
-              <p>L'académie vous propose une accompagnement personnalisé et une pédagogie adaptée à votre style.</div>
+              <p>L'académie vous propose une accompagnement personnalisé et une pédagogie adaptée à votre style, elle favorise l'esprit de groupe, et d'équipe.</div>
 					</div>
 				</div>
 			</div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 text-center wp4 animated fadeInDown">
-                        <a href="/" class="download-btn">S'inscrire<i class="fa fa-heart"></i></a>
+                        <a href="https://www.weezevent.com/academier-de-go-de-fan-hui" class="download-btn">S'inscrire<i class="fa fa-heart"></i></a>
                     </div>
                 </div>
 			</div>
