--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								Votre coach de Go en ligne
 								<br />
 								<br />
-								« Étudiez dans une vraie école de Go asiatique »
+								Étudiez dans une véritable école de Go asiatique
 								<br />
 							</h1>
 							<a href="m&#x61;ilto:oragefan%40yahoo&#46;fr" class="use-btn animated fadeInUp">Contacte-moi</a>
@@ -72,7 +72,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Accompagnement personnalisés</h1>
-								<p>C'est un peu paradoxal, mais plus on progresse en Go et plus on s'isole. Ton niveau augmente, et ça devient difficile de trouver des joueurs plus forts pour te conseiller, et te motiver. Je suis très attaché à la notion de proximité et de personnalisation. Chaque joueur est unique et possède son propre style, l'accompagnement tient compte du carractère de chacun, et la pédagogie est finement adaptée.   
+								<p>C'est un peu paradoxal, mais plus on progresse en Go et plus on s'isole. Le niveau augmente, et ça devient difficile de trouver des joueurs plus forts pour être conseillé et motivé. L'académie la notion de proximité, chaque joueur est unique et possède son propre style, l'accompagnement tient compte du carractère de chacun, et la pédagogie est finement adaptée.   
 								</p>
 							</div>
 						</div>
@@ -82,7 +82,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Commentaires ciblés</h1>
-								<p>On se dit souvent que l'on pourrait progresser si on se mettait à jouer sérieusement. En attendant, on joue ses parties en diletantte, et on s'abreuve de théorie. Pour s'amuser et progresser, il faut rester simple, faire des parties sérieuses, et obtenir des conseils adaptés et flexibles. Mes commentaires sont ciblés, ils servent toujours un objectif pedagogique personnalisé.</p>
+								<p>On se dit souvent que l'on pourrait progresser si on se mettait à jouer sérieusement. En attendant, on joue ses parties en diletantte, et on s'abreuve de théorie. Pour s'amuser et progresser, il faut rester simple, faire des parties sérieuses, et obtenir des conseils adaptés et flexibles. Les commentaires des parties sont ciblés, ils servent toujours un objectif pedagogique personnalisé.</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -90,7 +90,7 @@
 								<i class="fa fa-flash"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Mode tournoi</h1>
+								<h1>Des tournois pour construire</h1>
 								<p>Jouer en boucle, c'est un peu comme mettre le pilote automatique et répeter inlassablement ses erreurs. Les parties de tournois permettent de mettre un enjeu raisonable pour que chaque joueur s'engage vraiment dans chacune d'elles. C'est également en jouant, et pendant les commentaires que vous allez construire collectivement votre équipe.</p>
 							</div>
 						</div>
@@ -125,9 +125,33 @@
 						</div>
 						<div class="col-md-6" id="promise">
 							<h1>S'entrainer en langue française avec un joueur Pro</h1>
-              <p>Selon mon expérience, La méthode la plus efficace est très simple, jouer des parties sérieuses et avoir des commentaires adaptés, mais ce n'est pas toujours facile de jouer des parties en ligne sérieuses et pas facile non plus d'avoir un commentaire de qualité.</p>
+              <p>"Selon mon expérience, La méthode la plus efficace est très simple, jouer des parties sérieuses et avoir des commentaires adaptés, mais ce n'est pas toujours facile de jouer des parties en ligne sérieuses et pas facile non plus d'avoir un commentaire de qualité." - Fan Hui</p>
               <p>L'académie vous propose une accompagnement personnalisé et une pédagogie adaptée à votre style, elle favorise l'esprit de groupe, et d'équipe.</div>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="screenshots-intro" id="deroule">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Description du contenu</h1>
+						<p>Voici un exemple des contenus et du programme proposé aux participants.</p>
+						<dl>
+							<dt>Les lundi soir :</dt>
+							<dd>Commentaires des parties jouées en tournoi, la semaine précédente</dd>
+							<dt>Les jeudi soir :</dt>
+							<dd>Cours de Joseki et cours de fuseki animés sur KGS-plus par Fan_hui</dd>
+							<dt>Dans la semaine :</dt>
+							<dd>Les joueurs sont informés des tirages et sont invités à jouer leur partie du tournoi</dd>
+							<dt>Contenus :</dt>
+							<dd>Les commentaires et les cours sont enregistrés individuellement en vidéo, et tenu à disposition des joueurs</dd>
+							<dt>Outils pédagogiques :</dt>
+							<dd>• Nous utilisons <a href="https://slack.com">slack</a> pour dialoguer et créer animer la communauté</dd>
+							<dd>• Fan-Hui utilise <a href="https://trello.com">Trello</a> pour administrer les fiches pédagigiques des joueurs</dd>
+							<dd>• Pour permettre aux joueurs d'intervenir pendant les commentaires nous utilisons un serveur de communications vocales permettant d'accueillir jusqu'à 40 joueurs</dd>
+						</dl>
+                    </div>
 				</div>
 			</div>
 		</section>
