--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</div>
 							<div class="feature-content">
 								<h1>Accompagnement personnalisés</h1>
-								<p>C'est un peu paradoxal, mais plus on progresse en Go et plus on s'isole. Le niveau augmente, et ça devient difficile de trouver des joueurs plus forts pour être conseillé et motivé. L'académie la notion de proximité, chaque joueur est unique et possède son propre style, l'accompagnement tient compte du carractère de chacun, et la pédagogie est finement adaptée.   
+								<p>C'est un peu paradoxal, mais plus on progresse en Go et plus on s'isole. Le niveau augmente, et ça devient difficile de trouver des joueurs plus forts pour être conseillé et motivé. Dans l'académie vos parties sont commentées par Fan-Hui, ils sont ciblés et servent un objectif pedagogique personnalisé.</p>
 								</p>
 							</div>
 						</div>
@@ -81,8 +81,8 @@
 								<i class="fa fa-dollar"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Commentaires ciblés</h1>
-								<p>On se dit souvent que l'on pourrait progresser si on se mettait à jouer sérieusement. En attendant, on joue ses parties en diletantte, et on s'abreuve de théorie. Pour s'amuser et progresser, il faut rester simple, faire des parties sérieuses, et obtenir des conseils adaptés et flexibles. Les commentaires des parties sont ciblés, ils servent toujours un objectif pedagogique personnalisé.</p>
+								<h1>Progresser </h1>
+								<p>Pour démarrer l'académie, nous avons choisi de nous focaliser sur les joueurs entre 3 kyu et 2 Dan. Les programmes sont réalisés pour optimiser la progression des joueurs. Dans l'académie chaque joueur est unique et possède son propre style, l'accompagnement tient compte du carractère de chacun, et les conseils sont finement adaptés. L'esprit collectif est favorisé, et la pédagogie encourage la responsabilisation et l’autonomie de l’équipe</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-3 wp2 delay-1s">
@@ -144,6 +144,10 @@
 							<dd>Cours de Joseki et cours de fuseki animés sur KGS-plus par Fan_hui</dd>
 							<dt>Dans la semaine :</dt>
 							<dd>Les joueurs sont informés des tirages et sont invités à jouer leur partie du tournoi</dd>
+							<dt>Chaque trimestre :</dt>
+							<dd>Une rétrospective permettra de situer e tde récompenser les efforts et la progression des joueurs</dd>
+							<dt>En cours d'année :</dt>
+							<dd>• Pendant les tournois fédéraux, pour profiter de l'occasion de se rencontrer en face à face, des animations seront proposées aux joueurs de l'académie</dd>
 							<dt>Contenus :</dt>
 							<dd>Les commentaires et les cours sont enregistrés individuellement en vidéo, et tenu à disposition des joueurs</dd>
 							<dt>Outils pédagogiques :</dt>
