--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								<i class="fa fa-dollar"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Progresser </h1>
+								<h1>Posture basse</h1>
 								<p>Pour démarrer l'académie, nous avons choisi de nous focaliser sur les joueurs entre 3 kyu et 2 Dan. Les programmes sont réalisés pour optimiser la progression des joueurs. Dans l'académie chaque joueur est unique et possède son propre style, l'accompagnement tient compte du carractère de chacun, et les conseils sont finement adaptés. L'esprit collectif est favorisé, et la pédagogie encourage la responsabilisation et l’autonomie de l’équipe</p>
 							</div>
 						</div>
