Create header to html

--- a/client/index.html
+++ b/client/index.html
@@ -4,4 +4,7 @@
   <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
+  <section class="jumbotron">
+    <p>Académie de Go - Fan Hui</p>
+  </section>
 </body>
