Install a notifications manager

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
+  {{> notifications}}
   <section class="jumbotron">
     <p>Académie de Go - Fan Hui</p>
   </section>
