--- a/packages/insei/client/list.html
+++ b/packages/insei/client/list.html
@@ -1,6 +1,18 @@
 <template name="list">
-  <h1>Insei</h1>
-  {{#each inseis}}
-    <li>{{firstName}} {{lastName}} {{nickSlack}}</li>
-  {{/each}}
+  <div class="col-md-5">
+    <article class="panel panel-success">
+      <header class="panel-heading"><h5>Participants</h5></header>
+      <ul class="list-group panel-body">
+        {{#each inseis}}
+        {{> member}}
+        {{/each}}
+      </ul>
+    </article>
+  </div>
+</template>
+
+<template name="member">
+  <li class="list-group-item">
+    {{firstName}} {{lastName}}<span class="label label-success pull-right">{{nickSlack}}</span>
+  </li>
 </template>
