--- a/packages/insei/client/inseis-list.html
+++ b/packages/insei/client/inseis-list.html
@@ -1,17 +1,17 @@
-<template name="list">
+<template name="inseisList">
   <div class="col-md-5">
     <article class="panel panel-success">
       <header class="panel-heading"><h5>Participants</h5></header>
       <ul class="list-group panel-body">
         {{#each inseis}}
-        {{> member}}
+        {{> insei}}
         {{/each}}
       </ul>
     </article>
   </div>
 </template>
 
-<template name="member">
+<template name="insei">
   <li class="list-group-item">
     {{firstName}} {{lastName}}<span class="label label-success pull-right">{{nickSlack}}</span>
   </li>
