--- a/packages/youtube/client/insert-vdo.html
+++ b/packages/youtube/client/insert-vdo.html
@@ -1,3 +1,9 @@
 <template name="insertVdo">
-  insertion
+  <div class="col-md-3 col-md-offset-1">
+    <form id="form_insert_video" class="form-inline panel panel-success">
+      <label class="panel-heading">Ajout d'une vidéo</label>
+      <input id="input_youtube_id" class="form-control" placeholder="référence youtube">
+      <button id="btn_save_vdo" class="glyphicon glyphicon-ok btn btn-primary"></button>
+    </form>
+  </div>
 </template>
