Change field name to looklike youtube json response

--- a/packages/youtube/client/list-vdos.html
+++ b/packages/youtube/client/list-vdos.html
@@ -13,7 +13,7 @@
 
 <template name="vdo">
   <li class="list-group-item">
-    <a href="https://www.youtube.com/watch?v={{youtube_id}}" target="_blank">
+    <a href="https://www.youtube.com/watch?v={{video_id}}" target="_blank">
       Cours n°{{rank}}
     </a>
     <button id="btn-{{_id}}" class="glyphicon glyphicon-remove btn_remove_vdo pull-right"></button>
