Add cattegories Fuseki/Joseki list for vdos

--- a/packages/youtube/client/insert-vdo.html
+++ b/packages/youtube/client/insert-vdo.html
@@ -1,5 +1,5 @@
 <template name="insertVdo">
-  <div class="col-md-3 col-md-offset-1">
+  <div class="col-md-3">
     <form id="form_insert_video" class="form-inline panel panel-success">
       <label class="panel-heading">Ajout d'une vidéo</label>
       <input id="input_youtube_id" class="form-control" placeholder="référence youtube">
