--- a/packages/youtube/client/list-vdos.html
+++ b/packages/youtube/client/list-vdos.html
@@ -1,7 +1,7 @@
 <template name="listVdos">
-  <div class="col-md-5">
+  <div class="col-md-3">
     <article class="panel panel-success">
-      <header class="panel-heading"><h5>Cours en vidéos</h5></header>
+      <header class="panel-heading"><h4>Cours de {{category}}</h4></header>
       <ul class="list-group panel-body">
         {{#each vdos}}
         {{> vdo}}
