--- a/packages/youtube/client/youtube.html
+++ b/packages/youtube/client/youtube.html
@@ -1,4 +1,5 @@
 <template name="youtube">
   {{> insertVdo}}
-  {{> listVdos}}
+  {{> listVdos category="Fuseki"}}
+  {{> listVdos category="Joseki"}}
 </template>
