Refactor youtube package

--- a/packages/youtube/client/youtube.html
+++ b/packages/youtube/client/youtube.html
@@ -1,4 +1,4 @@
-<template name="youtube">
+<template name="adminYoutube">
   {{> insertVdo}}
   {{> listVdos category="Fuseki"}}
   {{> listVdos category="Joseki"}}
