Initialize frontend for vdo list

--- a/packages/youtube/client/BO-insert-vdo.html
+++ b/packages/youtube/client/BO-insert-vdo.html
@@ -1,4 +1,4 @@
-<template name="insertVdo">
+<template name="insertVdoBO">
   <div class="col-md-3">
     <form id="form_insert_video" class="form-inline panel panel-success">
       <label class="panel-heading">Ajout d'une vidéo</label>
