--- a/packages/youtube/client/FO-list-vdos.html
+++ b/packages/youtube/client/FO-list-vdos.html
@@ -1,21 +1,20 @@
-<template name="listVdos">
+<template name="listVdosFO">
   <div class="col-md-3">
     <article class="panel panel-success">
       <header class="panel-heading"><h4>Cours de {{category}}</h4></header>
       <ul class="list-group panel-body">
         {{#each vdos}}
-        {{> vdo}}
+        {{> vdoFO}}
         {{/each}}
       </ul>
     </article>
   </div>
 </template>
 
-<template name="vdo">
+<template name="vdoFO">
   <li class="list-group-item">
     <a href="https://www.youtube.com/watch?v={{video_id}}" target="_blank">
       Cours n°{{rank}}
     </a>
-    <button id="btn-{{_id}}" class="glyphicon glyphicon-remove btn_remove_vdo pull-right"></button>
   </li>
 </template>
