Add thumbnail to video record

--- a/packages/youtube/client/FO-list-vdos.html
+++ b/packages/youtube/client/FO-list-vdos.html
@@ -16,7 +16,7 @@
         <span class="label panel-title">Cours n° {{rank}} - {{category}}</span>
       </header>
       <a href="/player/{{video_id}}" target="_blank" class="thumbnail">
-        <img id="{{video_id}}" src="http://img.youtube.com/vi/{{video_id}}/0.jpg">
+        <img id="{{video_id}}" src="data:image/jpg;base64,{{thumbnail}}">
       </a>
     </div>
   </li>
