--- a/packages/youtube/client/FO-list-vdos.html
+++ b/packages/youtube/client/FO-list-vdos.html
@@ -10,12 +10,12 @@
 </template>
 
 <template name="vdoFO">
-  <li class="col-md-3 vdo col-md-pull-1 col-md-offset-1 vdo">
+  <li class="col-md-3 vdo">
     <div class="panel panel-success">
       <header class="panel-heading">
         <span class="label panel-title">Cours n° {{rank}} - {{category}}</span>
       </header>
-      <a href="/player/{{video_id}}" target="_blank" class="thumbnail">
+      <a href="/vdo/play/{{video_id}}" target="_blank" class="thumbnail">
         <img id="{{video_id}}" src="data:image/jpg;base64,{{thumbnail}}">
       </a>
     </div>
