Add video tournament management

--- a/packages/youtube/client/BO-youtube.html
+++ b/packages/youtube/client/BO-youtube.html
@@ -2,4 +2,5 @@
   {{> insertVdoBO}}
   {{> listVdosBO category="Fuseki"}}
   {{> listVdosBO category="Joseki"}}
+  {{> listVdosBO category="Tournament"}}
 </template>
