--- a/packages/youtube/client/FO-youtube.html
+++ b/packages/youtube/client/FO-youtube.html
@@ -2,4 +2,6 @@
   {{> listVdosFO category="Fuseki"}}
   <hr>
   {{> listVdosFO category="Joseki"}}
+  <hr>
+  {{> listVdosFO category="Tournament"}}
 </template>
