--- a/client/nav.html
+++ b/client/nav.html
@@ -2,25 +2,30 @@
   <ul class="nav nav-tabs">
     {{#if isInsei}}
       <li>
-        <a href="/vdo/{{user}}">
-          <button type="button" class="btn btn-success btn-lg glyphicon glyphicon-film"></button>
+        <a href="/vdo/course/{{nickSlack}}">
+          <button type="button" class="btn btn-success btn-lg fa fa-mortar-board"></button>
         </a>
       </li>
       <li>
-        <a href="/insei/{{user}}">
-          <button type="button" class="btn btn-success btn-lg glyphicon glyphicon-user"></button>
+        <a href="/vdo/tournament/{{nickSlack}}">
+          <button type="button" class="btn btn-success btn-lg fa fa-comment"></button>
+        </a>
+      </li>
+      <li>
+        <a href="/insei/{{nickSlack}}">
+          <button type="button" class="btn btn-success btn-lg fa fa-user"></button>
         </a>
       </li>
     {{/if}}
     {{#if isSensei}}
       <li>
         <a href="/admin/vdo/oragefan">
-          <button type="button" class="btn btn-info btn-lg glyphicon glyphicon-film"></button>
+          <button type="button" class="btn btn-info btn-lg fa fa-film"></button>
         </a>
       </li>
       <li>
         <a href="/admin/insei/oragefan">
-          <button type="button" class="btn btn-info btn-lg glyphicon glyphicon-user"></button>
+          <button type="button" class="btn btn-info btn-lg fa fa-user"></button>
         </a>
       </li>
     {{/if}}
