--- a/packages/youtube/client/FO-youtube.html
+++ b/packages/youtube/client/FO-youtube.html
@@ -1,7 +1,9 @@
-<template name="youtubeFO">
+<template name="course">
   {{> listVdosFO category="Fuseki"}}
   <hr>
   {{> listVdosFO category="Joseki"}}
-  <hr>
+</template>
+
+<template name="tournament">
   {{> listVdosFO category="Tournament"}}
 </template>
