Move create video in a specific package

--- a/packages/youtube/client/BO-youtube.html
+++ b/packages/youtube/client/BO-youtube.html
@@ -1,6 +1,6 @@
 <template name="youtubeBO">
   {{> insertVdoBO}}
-  {{> listVdosBO category="Fuseki"}}
-  {{> listVdosBO category="Joseki"}}
-  {{> listVdosBO category="Tournament"}}
+  {{> listVdosBO category="Fuseki" title="Cours de Fuseki"}}
+  {{> listVdosBO category="Joseki" title="Cours de Joseki"}}
+  {{> listVdosBO category="Tournament" title="Tournois"}}
 </template>
