--- a/packages/youtube/client/BO-list-vdos.html
+++ b/packages/youtube/client/BO-list-vdos.html
@@ -1,7 +1,7 @@
 <template name="listVdosBO">
   <div class="col-md-3">
     <article class="panel panel-success">
-      <header class="panel-heading"><h4>Cours de {{category}}</h4></header>
+      <header class="panel-heading"><h4>{{title}}</h4></header>
       <ul class="list-group panel-body">
         {{#each vdos}}
         {{> vdoBO}}
