Change routing insei's authentification

--- a/client/nav.html
+++ b/client/nav.html
@@ -19,8 +19,13 @@
     {{/if}}
     {{#if isSensei}}
       <li>
-        <a href="/admin/vdo/oragefan">
-          <button type="button" class="btn btn-info btn-lg fa fa-film"></button>
+        <a href="/admin/vdo/course/oragefan">
+          <button type="button" class="btn btn-info btn-lg fa fa-mortar-board"></button>
+        </a>
+      </li>
+      <li>
+        <a href="/admin/vdo/tournament/oragefan">
+          <button type="button" class="btn btn-info btn-lg fa fa-comment"></button>
         </a>
       </li>
       <li>
