--- a/packages/list-videos/client/FO-list-vdos.html
+++ b/packages/list-videos/client/FO-list-vdos.html
@@ -15,7 +15,7 @@
       <header class="panel-heading">
         <span class="label panel-title">Cours n° {{rank}} - {{category}}</span>
       </header>
-      <a href="/vdo/play/{{video_id}}" target="_blank" class="thumbnail">
+      <a href="/vdo/play/{{video_id}}/{{nickSlack}}" target="_blank" class="thumbnail">
         <img id="{{video_id}}" src="data:image/jpg;base64,{{thumbnail}}">
       </a>
     </div>
