Create specific page for tournament sort by round and league

--- a/packages/add-youtube-video/client/BO-insert-vdo.html
+++ b/packages/add-youtube-video/client/BO-insert-vdo.html
@@ -6,4 +6,5 @@
       <button id="btn_save_vdo" class="glyphicon glyphicon-ok btn btn-primary"></button>
     </form>
   </div>
+  <hr class="col-md-12">
 </template>
