Rename list vdos files

--- a/packages/list-videos/client/BO-list-course.html
+++ b/packages/list-videos/client/BO-list-course.html
@@ -1,3 +1,9 @@
+<template name="courseBO">
+  {{> insertVdoBO}}
+  {{> listVdosBO category="Fuseki" title="Cours de Fuseki"}}
+  {{> listVdosBO category="Joseki" title="Cours de Joseki"}}
+</template>
+
 <template name="listVdosBO">
   <div class="col-md-3">
     <article class="panel panel-success">
