Rename list vdos files

--- a/packages/youtube/client/FO-youtube.html
+++ b/packages/youtube/client/FO-youtube.html
@@ -1,9 +1,9 @@
-<template name="course">
+<template name="courseFO">
   {{> listVdosFO category="Fuseki"}}
   <hr>
   {{> listVdosFO category="Joseki"}}
 </template>
 
-<template name="tournament">
+<template name="tournamentFO">
   {{> listVdosFO category="Tournament"}}
 </template>
